fix tooltip flickering

--- a/src/components/overlays/tooltip/tooltip.styles.scss
+++ b/src/components/overlays/tooltip/tooltip.styles.scss
@@ -1,6 +1,15 @@
 
 @import '../../../shared/ui-vars';
 
+.tap-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: auto;
+}
+
 .container {
     position: fixed;
     pointer-events: none;
@@ -9,7 +18,6 @@
 .tooltip {
     position: absolute;
     z-index: 3000;
-    pointer-events: auto;
     transition: opacity 300ms;
     opacity: 0;
     display: initial;
@@ -73,6 +81,7 @@
     min-height: 2em;
     min-width: 2em;
     border-radius: .2em;
+    pointer-events: auto;
     .left & {
         right: 0;
         transform: translate(-.5rem, 0%);
